[gd_scene load_steps=16 format=1]

[ext_resource path="res://FigthScene.gd" type="Script" id=1]
[ext_resource path="res://levels/SunnyStage.tscn" type="PackedScene" id=2]
[ext_resource path="res://music/stage1.ogg" type="AudioStream" id=3]
[ext_resource path="res://ui/PlayerUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/general.fnt" type="BitmapFont" id=5]
[ext_resource path="res://sounds/koend.wav" type="Sample" id=6]
[ext_resource path="res://sounds/kosound.wav" type="Sample" id=7]
[ext_resource path="res://sounds/popopo.wav" type="Sample" id=8]
[ext_resource path="res://graphics/screen/flash.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]

resource/name = "KO"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0.1, 0.1 ), Vector2( 2, 2 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 510, 140 ), Vector2( 340, 110 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath(".:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "cligne"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ false, true ] }

[sub_resource type="SampleLibrary" id=3]

samples/koend = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/kosound = { "db":0.0, "pitch":1.0, "sample":ExtResource( 7 ) }
samples/popopo = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }

[sub_resource type="Animation" id=4]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.0, 1.0, 0.0 ] }

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[node name="FigthScene" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )
scale = 0.8

[node name="SunnyStage" parent="." instance=ExtResource( 2 )]

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = true
stream/volume_db = -10.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="p1ui" parent="." instance=ExtResource( 4 )]

margin/left = 19.0
margin/top = -2.0
margin/right = 59.0
margin/bottom = 38.0

[node name="p2ui" parent="." instance=ExtResource( 4 )]

margin/left = 574.0
margin/top = -2.0
margin/right = 614.0
margin/bottom = 38.0

[node name="Kolbl" type="Label" parent="."]

visibility/opacity = 0.0
rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 510.0
margin/top = 140.0
margin/right = 680.0
margin/bottom = 180.0
custom_fonts/font = ExtResource( 5 )
text = "KO !"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Kolbl"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/KO = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="playwin" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 380.0
margin/top = 200.0
margin/right = 648.0
margin/bottom = 240.0
custom_fonts/font = ExtResource( 5 )
text = "Player 1 Wins !"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="playwin"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/cligne = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 2
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Flash" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 512.5, 247.5 )
transform/scale = Vector2( 103.5, 50.5 )
texture = ExtResource( 9 )
__meta__ = { "_edit_lock_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flash"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="flashtime" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade_in = SubResource( 5 )
anims/fade_out = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="endgame" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false


